syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sep3.protobuf.report";

service Report {
  rpc GetReports(ReportFilter) returns (ReportList);
  rpc CreateReport(CreateReportObject) returns (ReportObject);
  rpc ReviewReport(ToReviewReport) returns (ReviewedReport);
}

message ReportFilter {
  string email = 1;
  bool approved = 2;
}

message ReportList {
  repeated ReportObject reports = 1;
}

message ReportObject {
  string date = 2;
  string time = 3;
  bytes proof = 4;
  string description = 5;
  string status = 6;
  LocationObject location = 7;
  UserObject user = 8;
  string id =1;
}

message LocationObject {
  double latitude = 1;
  double longitude = 2;
  //there is no byte type, so it is a bit inefficient
  int32 size = 3;
}

message UserObject{
  string userId =1;
  string username = 2;
}

message CreateReportObject{
  string date = 1;
  string time = 2;
  bytes proof = 3;
  string description = 4;
  string status = 5;
  LocationObject location = 6;
  string creatorEmail = 7;
}


message ToReviewReport{
  string reportId=1;
  string updatedStatus=2;
}

message ReviewedReport{
  string confirmation=1;
}